--- a/templates/admin_panel/Applications.html
+++ b/templates/admin_panel/Applications.html
@@ -133,9 +133,10 @@
                                                     <i class="fas fa-eye"></i>
                                                 </a>
                                                 {% if form.status == 'draft' or form.status == 'returned' %}
-                                                    <a href="#" class="btn btn-sm btn-outline-secondary">
-                                                        <i class="fas fa-edit"></i>
-                                                    </a>
+                                                <a href="{% url 'edit_ferpa_form' form.id %}" 
+                                                class="btn btn-sm btn-outline-secondary">
+                                                 <i class="fas fa-edit"></i>
+                                             </a>
                                                 {% endif %}
                                                 <a href="{% url 'generate_pdf' form.id %}" class="btn btn-sm btn-outline-info">
                                                     <i class="fas fa-file-pdf"></i>
